--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "xmldom": ">=0.1.22",
     "xpath": ">=0.0.23"
   },
+  "devDependencies": {
+    "jsdoc": "^3.4.0",
+    "jshint": "^2.9.1",
+    "mocha": "^2.4.5"
+  },
   "engines": {
     "node": ">=4.2.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jshint --exclude ./node_modules/",
+    "doc": "jsdoc -c jsdoc/config.json"
   },
   "keywords": [
     "ibm",
