--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
   ],
   "dependencies": {
     "xmldom": ">=0.1.22",
-    "xpath": ">=0.0.23",
-    "fs-extra": ">=0.30.0",
-    "pretty-data": ">=0.40.0",
-    "shelljs": ">=0.7.4",
-    "yargs": ">=5.0.0"
+    "xpath": ">=0.0.23"
   },
   "devDependencies": {
     "jsdoc": "^3.4.0",
