Corrected repository locations for public

--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
   "contributors": [
     {
       "name": "Christopher Grote",
-      "email": "christopher.grote@uk.ibm.com"
+      "email": "chris@thegrotes.net"
     }
   ],
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.ibm.com/christopher-grote/ibm-igc-lineage.git"
+    "url": "https://github.com/cmgrote/ibm-igc-lineage.git"
   },
   "bugs": {
-    "url": "https://github.ibm.com/christopher-grote/ibm-igc-lineage/issues"
+    "url": "https://github.com/cmgrote/ibm-igc-lineage/issues"
   },
-  "homepage": "https://github.ibm.com/christopher-grote/ibm-igc-lineage"
+  "homepage": "https://github.com/cmgrote/ibm-igc-lineage"
 }
